# bitcoin_trend_prediction

./: .gitignore  README.md  pyproject.toml
dashboard/: .env_exemplo  README.md  dashboard_utils.py  requirements.txt  streamlit_app.py
data_engineering/: bitcoin_data_pipeline.ipynb  bitcoin_data_pipeline_datasets.ipynb  bitcoin_data_pipeline_fullload.ipynb  bitcoin_data_pipeline_fullload_v2.ipynb
ml_model_serving/: .env_exemplo  btc_trend_prediction_model_best.joblib  client.py  requirements.txt  server.py
ml_model_training/: .env_exemplo  btc_trend_prediction_model.ipynb  btc_trend_prediction_model.joblib  btc_trend_prediction_model_v2.ipynb  scaler.joblib
notebooks/: sample_prediction.ipynb  sample_sentiment.ipynb
notebooks/datasets/: btc_dataset.csv  wikipedia_edits.csv
